adjust Solution description for Reverse String II

--- a/541.md
+++ b/541.md
@@ -3,9 +3,10 @@
 
 # Solution
 We can solve the problem by doing below steps: 
-1. get a substring t with length k from given string s everytime
-2. reverse t if needed. Here we can use a flag and reverse it after processing a substring.
+1. get a substring t with length k from given string s
+2. reverse t if needed. Here we can use a flag to help us to make the decision. The flag is initialized as true and reversed after process t no matter t is reversed or not.
 3. append t to result
+4. if no more substring can be got from s, all done; otherwise, go back to step 1.
 
 ```
 public class Solution {
